# Explainable-MoE-Debugger

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  AUTONOMOUS_DEPLOYMENT_COMPLETE.md  AUTONOMOUS_DEPLOYMENT_SUCCESS.md  AUTONOMOUS_ENHANCEMENT_COMPLETE.md  AUTONOMOUS_FEATURES_GUIDE.md  AUTONOMOUS_RESEARCH_PUBLICATION.md  AUTONOMOUS_SDLC_COMPLETION_FINAL.md  AUTONOMOUS_SDLC_COMPLETION_REPORT.md  AUTONOMOUS_SDLC_REPORT.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  Dockerfile  Dockerfile.autonomous  Dockerfile.healthcheck  Makefile  PROGRESSIVE_QUALITY_GATES.md  PROGRESSIVE_QUALITY_GATES_IMPLEMENTATION.md  PROGRESSIVE_QUALITY_GATES_V2.md  PROJECT_CHARTER.md  README.md  RESEARCH_ACHIEVEMENTS.md  RESEARCH_ACHIEVEMENTS_FINAL.md  RESEARCH_PUBLICATION_SUMMARY.md  SDLC_ANALYSIS.md  SECURITY.md  demo_progressive_quality_gates.py  docker-compose.autonomous.yml  docker-compose.dev.yml  docker-compose.progressive-qa.yml  docker-compose.yml  docker-entrypoint-autonomous.sh  k8s-deployment.yaml  nas_experiment_results.json  nginx.conf  pyproject.toml  (+22 more)
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  research_discussion.yml
.github/workflows/: progressive-quality-gates.yml
docs/: ROADMAP.md
docs/adr/: 0001-architecture-decision-record-template.md
docs/examples/: README.md
frontend/: Dockerfile.dev  jest.config.js  jest.setup.js  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/src/__tests__/components/layout/: TabBar.test.tsx
frontend/src/__tests__/store/: debugger.test.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/common/: LoadingScreen.tsx
frontend/src/components/layout/: DebuggerLayout.tsx  Sidebar.tsx  StatusBar.tsx  TabBar.tsx
frontend/src/components/panels/: ConsolePanel.tsx  ElementsPanel.tsx  NetworkPanel.tsx  PerformancePanel.tsx
frontend/src/components/visualizations/: ControlPanel.tsx  MetricsOverlay.tsx  RoutingVisualization.tsx
frontend/src/store/: debugger.ts  provider.tsx
frontend/src/types/: index.ts
monitoring/: alert_rules.yml  prometheus.yml
monitoring/grafana/dashboards/: progressive-quality-gates-dashboard.json
scripts/: build.sh  check_code_complexity.py  check_performance_regression.py  check_test_coverage.py  continuous_health_monitor.py  deploy.sh  deployment_health_check.py  generate_quality_report.py  quality_gate_decision.py  quick_performance_check.py  run_tests.py  test_websocket_health.py
src/moe_debugger/: __about__.py  __init__.py  adaptive_expert_ecosystem.py  adaptive_routing.py  advanced_caching.py  advanced_observability.py  advanced_optimization.py  ai_threat_detection.py  analyzer.py  auto_scaling.py  autonomous_recovery.py  autonomous_research_orchestrator.py  breakthrough_optimization_engine.py  caching.py  causal_moe_routing.py  chaos_engineering.py  circuit_breaker.py  cli.py  debugger.py  debugger_factory.py  distributed.py  distributed_optimization.py  enhanced_debugger.py  enhanced_quantum_routing.py  enterprise_governance.py  experimental_routing_framework.py  federated_learning_system.py  health_checker.py  hooks.py  information_bottleneck_routing.py  intelligent_caching.py  logging_config.py  meta_learning_nas.py  metrics_exporter.py  mock_torch.py  model_loader.py  models.py  monitoring.py  neural_architecture_search.py  neural_architecture_search_enhanced.py  (+15 more)
src/moe_debugger/cache/: __init__.py  manager.py  memory_cache.py  redis_cache.py
src/moe_debugger/database/: __init__.py  connection.py  models.py  repositories.py
tests/: __init__.py  conftest.py
tests/benchmarks/: test_performance_benchmarks.py
tests/integration/: test_full_workflow.py
tests/load/: locustfile.py
tests/unit/: test_analyzer.py  test_cache.py  test_debugger.py  test_models.py
